# openvice

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  openvice.sln
common/: Makefile  file_img.c  file_img.h  main.c
common/include/: engine.h
common/src/: engine.c
include/: camera.h  engine.h  file_dff.h  file_dir.h  file_img.h  window.h
openvice/: Aascaff128.tga  Alumox64.tga  Alumox64b.tga  Alumplat64.tga  Bow_door_graffiti_128.tga  Camera.h  ForSale1_64.tga  Grass.tga  IMGArchive.h  IMGarchive.cpp  KeepOut_64.tga  Newpavement.tga  Plane Road.tga  README.md  Whitewash.tga  airconfrnt1_128.tga  airport1_64.tga  airport2_64.tga  alleygate256.tga  banding6_64HV.tga  banding8_64HV.tga  barrel_64HV.tga  binwheel64.tga  black64.tga  blackdrum128.tga  blueflt64.tga  bluemetal.tga  bluemetal02.tga  bluepink64.tga  ceiling_light64.tga  chrome_pipe_32.tga  cl_scaf_64.tga  cl_seat2temp.tga  cl_table_top_256.tga  concretenew256.tga  cornerstar.tga  decodoor1256.tga  dirtywhite.tga  drain.tga  electricbox256.tga  (+88 more)
openvice/rwtools-master/: args.h  dffconv.cpp  dffread.cpp  dffwrite.cpp  dumprwtree.cpp  oglnative.cpp  txdconv.cpp  txdex.cpp  txdread.cpp  xboxnative.cpp
src/: camera.c  engine.c  file_dff.c  file_dir.c  file_img.c  main.c  window.c
temp/openvice/: loader_img.h  openvice.vcxproj.filters  shader.h  simple_shader.fs  simple_shader.vs
temp/openvice/rwtools-master/: dffread.cpp  ps2native.cpp  renderware.cpp  renderware.h  txdex.cpp  txdwrite.cpp  uvanim.cpp
